[package]
name = "raiden"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
ethabi = "8.0.0"
ethereum-types = "0.6.0"
ethsign = "0.7.2"
futures = { version = "0.3", features = ["compat"] }
hex = "0.4.0"
hyper = "0.13.1"
rpassword = "4.0"
rusqlite = "0.20.0"
serde = "1.0.101"
serde_json = "1.0.40"
slog = "2.5.2"
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-term = "2.4.2"
tokio = { version = "0.2.9", features=["full"]}
web3 = "0.8.0"
url = "2.1.0"

[[bin]]
path = "raiden/main.rs"
name = "raiden"

[lib]
path = "raiden/lib.rs"
